# rust-engine

./: .gitignore  README.md  RELEASE_GUIDE.md  build.rs
.github/workflows/: build-release.yml  release.yml  test.yml
android-app/: build.gradle.kts  gradlew  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/java/com/apptcheck/agent/: MainActivity.kt
android-app/app/src/main/java/com/apptcheck/agent/data/: StorageManager.kt
android-app/app/src/main/java/com/apptcheck/agent/scheduler/: StrikeReceiver.kt
android-app/app/src/main/java/com/apptcheck/agent/service/: BookingForegroundService.kt
android-app/app/src/main/java/com/apptcheck/agent/ui/: DashboardScreen.kt  MainViewModel.kt
android-app/app/src/main/res/values/: strings.xml
android-app/gradle/wrapper/: gradle-wrapper.properties
docs/architecture/: architecture.md
docs/deployment/: deployment.md
docs/implementation/: implementation_guide.md
rust-engine/: Cargo.toml  build.rs
rust-engine/src/: agent.udl  booker_engine.rs  http_client.rs  lib.rs
src/: scraper_engine.rs
