
[package]
name = "rust-engine"
version = "3.6.0" 
edition = "2021"
description = "High-performance native booking engine for Android"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_engine"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
tokio = { version = "1.45", features = ["full", "tracing"] }
futures = "0.3"

# Pure-Rust browser mimicry for 2026
rquest = { version = "0.31.0", features = ["boringssl", "socks5", "gzip", "brotli"] }

# Unified 0.28.1 Stack
uniffi = { version = "0.28.1", features = ["tokio", "cli"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTML Parsing (2026 Standard)
scraper = "0.21"

# Concurrency (2026 Standard)
dashmap = "6.1"

# Utilities
uuid = { version = "1.12", features = ["v4", "serde"] }
rand = "0.8"
regex = "1.10"

# Logging & Observation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
