[package]
name = "rust-engine"
version = "3.5.2"
edition = "2021"
description = "High-performance native booking engine for Android"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_engine"

# Define the bindgen tool as a binary within the project
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
# UPDATED: Tokio to latest stable LTS version (1.43 as of April 2026)
tokio = { version = "1.43", features = ["full", "rt", "macros"] }
futures = "0.3"

# FIXED: rquest 0.31.0 is DEPRECATED and YANKED
# Using wreq 6.0.0-rc.28 (official successor) with proper impersonation support
# The rquest project was moved to wreq due to ownership issues
# See: https://github.com/0x676e67/rquest-deprecated
wreq = { version = "6.0.0-rc.28", features = ["boringssl", "socks5", "gzip", "brotli", "prefix-symbols"] }
wreq-util = { version = "3.0.0-rc.10", features = ["emulation"] }

# UPDATED: uniffi to latest stable version 0.30.0
# Note: 0.30.0 has breaking changes - requires #[uniffi::trait_interface] for UDL-based traits
uniffi = { version = "0.30.0", features = ["tokio", "cli"] }

# UPDATED: serde and related crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UPDATED: chrono to latest
chrono = { version = "0.4.40", features = ["serde"] }

# UPDATED: scraper to latest stable
scraper = "0.22"

# UPDATED: uuid to latest
uuid = { version = "1.16", features = ["v4"] }

# UPDATED: rand to latest
rand = "0.9"

# UPDATED: tracing to latest
tracing = "0.1"

# UPDATED: anyhow to latest
anyhow = "1.0"

# UPDATED: thiserror to latest
thiserror = "2.0"

# UPDATED: regex to latest
regex = "1.11"

[build-dependencies]
# UPDATED: uniffi build dependency
uniffi = { version = "0.30.0", features = ["build"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
