[package]
name = "rust-engine"
version = "3.5.4"
edition = "2021"
description = "High-performance native booking engine for Android"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_engine"

# Define the bindgen tool as a binary within the project
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
# Tokio to latest stable LTS version (1.43 as of April 2026)
tokio = { version = "1.43", features = ["full", "rt", "macros"] }
futures = "0.3"

# Using wreq 6.0.0-rc.28 (official successor) with proper impersonation support
wreq = { version = "6.0.0-rc.28", features =["boringssl", "socks5", "gzip", "brotli", "prefix-symbols"] }
wreq-util = { version = "3.0.0-rc.10", features = ["emulation"] }

# uniffi to latest stable version 0.30.0
# Note: 0.30.0 has breaking changes - requires #[uniffi::trait_interface] for UDL-based traits
uniffi = { version = "0.30.0", features = ["tokio", "cli"] }

# serde and related crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# chrono to latest
chrono = { version = "0.4.40", features = ["serde"] }

# scraper to latest stable
scraper = "0.22"

# uuid to latest
uuid = { version = "1.16", features = ["v4"] }

# rand to latest
rand = "0.9"

# tracing to latest
tracing = "0.1"

# anyhow to latest
anyhow = "1.0"

# thiserror to latest
thiserror = "2.0"

# regex to latest
regex = "1.11"[build-dependencies]
# uniffi build dependency
uniffi = { version = "0.30.0", features = ["build"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
